@@ -3,6 +3,7 @@
 - fix similarity rotate+scale, thanks Topochicho
 - fix 16-bit PNG save, thanks John
 - fix dzsave date on Windows, thanks John
+- fix vipsthumbnail on many-core systems, thanks James
 
 25/7/14 started 7.40.5
 - fix a race in im_maxpos_avg()
